Fixed bug #51263 (imagettftext and rotated text uses wrong baseline)